# database_unify_analysis

glaredb/: cities.csv  调研.md
spice_rust_query/: Cargo.toml  README.md
spice_rust_query/examples/: seed_ck_perf.rs  seed_csv_perf.rs  seed_pg_perf.rs
spice_rust_query/report/: clickhouse.native.md  clickhouse.spice.md  csv.native.md  csv.spice.md  postgres.native.md  postgres.spice.md
spice_rust_query/spice/: perf_spicepod.yaml
spice_rust_query/spice/perf/: spicepod.yaml
spice_rust_query/sql/: ck.sql  pg.sql
spice_rust_query/src/: lib.rs  main.rs
spice_rust_query/tests/: clickhouse.rs  csv.rs  postgres.rs
spice_rust_query/tests/common/: mod.rs
spiceai/: 调研.md
spiceai/spice_qs/: spicepod.yaml
spiceai/spice_qs/component/: docker-compose.yml
spiceai/spice_qs/spicepods/spiceai/quickstart/: spicepod.yaml
